--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
       run: |
        actions-usage \
         -org $GITHUB_REPOSITORY_OWNER \
-        -days 28 \
+        -days 1 \
         -by-repo \
         -punch-card \
-        -token ${{ secrets.GITHUB_TOKEN }}  2> /dev/null 
+        -token ${{ secrets.GITHUB_TOKEN }}  2> /dev/null  >> $GITHUB_STEP_SUMMARY
