--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,9 +20,11 @@ jobs:
         actions-usage: latest
     - name: Generate actions-usage report
       run: |
+       echo "```" >> $GITHUB_STEP_SUMMARY
        actions-usage \
         -org $GITHUB_REPOSITORY_OWNER \
         -days 1 \
         -by-repo \
         -punch-card \
         -token ${{ secrets.GITHUB_TOKEN }}  2> /dev/null  >> $GITHUB_STEP_SUMMARY
+       echo "```" >> $GITHUB_STEP_SUMMARY
